# Python-Data-2A-ENSAE

./: .gitignore  LICENSE  MAKE_env.py  README.md  pyproject.toml
code/: get_MNIST.py  image_classifier.py  import.py
src/: .env.example  MNIST.py  OCR test.ipynb  OCR_api.py  captcha_evaluation.csv  evaluate_model.py  main.ipynb  multi_head_CNN.py  simple_CNN.py
