[project]
name = "python-data-2a-ensae"
version = "0.1.0"
description = "Captcha recognition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "tensorflow>=2.15.0",
    "kagglehub>=0.2.0",
    "uv>=0.9.16",
    "matplotlib>=3.10.7",
    "ipykernel>=7.1.0",
    "pillow>=12.0.0",
    "iprogress>=0.4",
    "h5py>=3.15.1",
    "tqdm>=4.67.1",
]
